AbendReportUseCase implemented